<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.wanandroid.ui.main.WeekActivity">

    <include layout="@layout/common_toolbar"/>

    <TextView
        android:layout_marginTop="@dimen/dp_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/hotweek"
        android:textColor="@color/colorRed"
        android:textSize="19sp" />

    <com.example.wanandroid.widget.FlowLayout
        android:id="@+id/flowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="16dp">

    </com.example.wanandroid.widget.FlowLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/weekhistory"
            android:textColor="@color/colorBlue"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/week_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:drawableLeft="@mipmap/lose"
            android:drawablePadding="6dp"
            android:text="@string/clear"
            android:textColor="@color/comment_text"
            android:textSize="19sp" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
