<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.wanandroid.ui.main.MainActivity">
    <!--主页面-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/i"
            android:layout_gravity="right"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0" />

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coord"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="9">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlue"
                    android:gravity="center"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <TextView
                        android:id="@+id/toolBarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/homePage"
                        android:textColor="@color/White"
                        android:textSize="@dimen/sp_18" />
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_18"
                android:src="@mipmap/arrows"
                app:backgroundTint="@color/color009688"/>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </android.support.design.widget.CoordinatorLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/home_but"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/homepage_selected"
                android:gravity="center"
                android:text="@string/homePage"
                android:textColor="@color/textcolor_selected" />

            <RadioButton
                android:id="@+id/knowledge_but"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/knowledge_selected"
                android:gravity="center"
                android:text="@string/knowledge"
                android:textColor="@color/textcolor_selected" />

            <RadioButton
                android:id="@+id/official_but"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/official_selected"
                android:gravity="center"
                android:text="@string/official"
                android:textColor="@color/textcolor_selected" />

            <RadioButton
                android:id="@+id/navigation_but"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/navigation_selected"
                android:gravity="center"
                android:text="@string/navigation"
                android:textColor="@color/textcolor_selected" />

            <RadioButton
                android:id="@+id/project_but"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/project_selected"
                android:gravity="center"
                android:text="@string/project"
                android:textColor="@color/textcolor_selected" />
        </RadioGroup>

    </LinearLayout>


    <!--抽屉部分-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true"
        android:background="@color/colorWhite"
        app:headerLayout="@layout/main_header_layout"
        app:itemBackground="@drawable/navigation_menu_item_color"
        app:itemIconTint="@color/navigation_menu_text_color"
        app:itemTextColor="@color/navigation_menu_text_color"
        app:menu="@menu/main_menu" />

</android.support.v4.widget.DrawerLayout>
