<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_8"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="@dimen/dp_3"
        app:cardElevation="@dimen/dp_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/icon_wan"
                    android:drawablePadding="@dimen/dp_5"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tv_chapterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/tv_author"
                    android:gravity="end"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlue"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hotweek"
                android:textColor="@color/comment_text"
                android:textSize="@dimen/sp_16" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/news"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/news"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textColor="@color/color04F812"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_navigation"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_24"
                    android:background="@drawable/navigation"
                    android:gravity="center"
                    android:text="@string/navigation"
                    android:textColor="@color/colorRed"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_love"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/like_seleced" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="@dimen/dp_220"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_toEndOf="@+id/iv_love"
                    android:drawablePadding="@dimen/dp_5"
                    android:drawableStart="@mipmap/clock"
                    android:gravity="center_vertical"
                    android:textColor="@color/comment_text"
                    tools:ignore="RtlCompat"
                    tools:text="14小时之前" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0" />
</RelativeLayout>